Inicio de desarrollo de indice

--- a/Trabajo_practico.cbp
+++ b/Trabajo_practico.cbp
@@ -35,6 +35,10 @@
 		<Unit filename="funciones.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="indice.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="indice.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
